Fixed window for chromium and aligned skills tags

--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -7,7 +7,7 @@ body, html {
 .side-bar{
   font-style: italic;
   color: white;
-  float: inline-start;
+  float: left;
 
   background-color: #323232;
   width: 10em;
@@ -163,8 +163,10 @@ body, html {
   text-align: left;
 }
 .box{
-  float: left;
-margin: 10px;
+  display: inline-flex;
+  margin: 10px;
+  width: 250px;
+  flex-direction: column;
 }
 .book{
  float: left;
